# kubernetes

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
assets/materials/: conclusions.md  create_k8s_cluster.md  deploy.md  expose_app.md  homework.md  install_tools.md  minikube.md  scale_app.md  template.md  update_app.md  view_pods_nodes.md
docker/server/: Dockerfile
manifests/: db-deployment.yaml  kustomization.yaml  prometheus-deployment.yaml  server-deployment.yaml
prometheus/: prometheus.yml
src/homework/: crud.py  database.py  message_board.py  models.py  schemas.py
src/homework/templates/: message_creation.html  messages.html
